--- a/src/app.html
+++ b/src/app.html
@@ -1,34 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="robots" content="follow, index" />
-    <title>SpaceX Launches | SvelteKit and Vercel</title>
-    <meta
-      content="SvelteKit app fetching data from the SpaceX GraphQL API, deployed to Vercel."
-      name="description"
-    />
-    <meta
-      property="og:title"
-      content="SpaceX Launches | SvelteKit and Vercel"
-    />
-    <meta property="og:image" content="/twitter.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@vercel" />
-    <meta
-      name="twitter:title"
-      content="SpaceX Launches | SvelteKit and Vercel"
-    />
-    <meta
-      name="twitter:description"
-      content="SvelteKit app fetching data from the SpaceX GraphQL API, deployed to Vercel."
-    />
-    <meta name="twitter:image" content="/twitter.png" />
-    %svelte.head%
-  </head>
-  <body>
-    <div id="svelte">%svelte.body%</div>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<link rel="icon" href="/icon.svg" type="image/svg+xml" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<meta name="msapplication-TileColor" content="#0e141e" />
+		<meta name="theme-color" content="#0e141e" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		%svelte.head%
+
+		<style>
+			html {
+				visibility: hidden;
+				background-color: #080c11;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="svelte">%svelte.body%</div>
+	</body>
 </html>
